--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -49,87 +49,48 @@
     }
    ],
    "source": [
-    "\n",
-    "doc = {\n",
-    "  'user_id': \"\",\n",
-    "}\n",
-    "docs = [doc]\n",
-    "# 建立文件 必須給定 集合名稱 文件id\n",
-    "# 即使 集合一開始不存在 都可以直接使用\n",
-    "\n",
-    "# 語法\n",
-    "# doc_ref = db.collection(\"集合名稱\").document(\"文件id\")\n",
-    "\n",
-    "doc ['user_id'] = \"done\"\n",
-    "print (docs)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 202,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "/Users/xianghw/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:2: DeprecationWarning: 'Query.get' is deprecated:  please use 'Query.stream' instead.\n  \n"
+    }
+   ],
    "source": [
-    "doc_ref = db.document(\"pruduct/insurance/人身保險/人壽保險/幸福轉蛋保險/SHF5QFXE5aa9E4GnRkba\")"
+    "collection_ref = db.collection(\"transaction\")\n",
+    "docs = collection_ref.where('salesID','==', 'U60d04b2a91c5b050242a42de2c1b1947').get()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<google.cloud.firestore_v1.document.DocumentReference at 0x112fbabd0>"
+      "text/plain": "[<google.cloud.firestore_v1.document.DocumentSnapshot at 0x110e832d0>]"
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 203
     }
    ],
    "source": [
-    "doc_ref"
+    "list(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "<google.cloud.firestore_v1.document.DocumentSnapshot at 0x1131bdad0>"
-     },
-     "metadata": {},
-     "execution_count": 97
-    }
-   ],
-   "source": [
-    "doc_ref.get()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "{'適合客群': '20~40', '價格': '2500'}"
-     },
-     "metadata": {},
-     "execution_count": 98
-    }
-   ],
-   "source": [
-    "doc_ref.get().to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 180,
    "metadata": {
     "tags": []
    },
@@ -137,47 +98,70 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "CANTFINE\n"
+     "text": "<class 'google.api_core.datetime_helpers.DatetimeWithNanoseconds'>\n"
     }
    ],
    "source": [
-    "path = \"user/\" + \"U60d04b2a91c5b050242a42de2c1b1947\"\n",
-    "collection_ref = db.document(path)\n",
-    "doc = collection_ref.get()\n",
-    "if doc.to_dict() == None:\n",
-    "    print (\"CANTFINE\")\n",
-    "else: print ( doc.to_dict())"
+    "for i in docs:\n",
+    "    doc = i.to_dict()\n",
+    "    date = doc['date']\n",
+    "    print(date)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 187,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2020-06-30 16:00:00+00:00\n"
+    }
+   ],
+   "source": [
+    "date = str(date)\n",
+    "print(date)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "<google.cloud.firestore_v1.document.DocumentSnapshot at 0x113102c90>"
+      "text/plain": "6"
      },
      "metadata": {},
-     "execution_count": 132
+     "execution_count": 195
     }
    ],
-   "source": []
+   "source": [
+    "int(date.split(\"-\")[1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 209,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "None\n"
+    }
+   ],
+   "source": [
+    "doc = db.collection('sales').document('U60d04b2a91c5b050242a42de2c1b1947').get()\n",
+    "print(doc.to_dict())"
+   ]
   },
   {
    "cell_type": "code",
