--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-0b48a0a5cc3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# 初始化firebase，注意不能重複初始化\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mfirebase_admin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize_app\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# 初始化firestore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-215-0b48a0a5cc3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# 初始化firebase，注意不能重複初始化\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mfirebase_admin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize_app\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# 初始化firestore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.7/site-packages/firebase_admin/__init__.py\u001b[0m in \u001b[0;36minitialize_app\u001b[0;34m(credential, options, name)\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DEFAULT_APP_NAME\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         raise ValueError((\n\u001b[0;32m---> 72\u001b[0;31m             \u001b[0;34m'The default Firebase app already exists. This means you called '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m             \u001b[0;34m'initialize_app() more than once without providing an app name as '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0;34m'the second argument. In most cases you only need to call '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: The default Firebase app already exists. This means you called initialize_app() more than once without providing an app name as the second argument. In most cases you only need to call initialize_app() once. But if you do want to initialize multiple apps, pass a second argument to initialize_app() to give each app a unique name."
      ]
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 216,
    "metadata": {
     "tags": []
    },
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[<google.cloud.firestore_v1.document.DocumentSnapshot at 0x110e832d0>]"
+      "text/plain": "[<google.cloud.firestore_v1.document.DocumentSnapshot at 0x1136c62d0>,\n <google.cloud.firestore_v1.document.DocumentSnapshot at 0x11312e410>,\n <google.cloud.firestore_v1.document.DocumentSnapshot at 0x112759d50>]"
      },
      "metadata": {},
-     "execution_count": 203
+     "execution_count": 217
     }
    ],
    "source": [
@@ -90,17 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 218,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "<class 'google.api_core.datetime_helpers.DatetimeWithNanoseconds'>\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in docs:\n",
     "    doc = i.to_dict()\n",
@@ -147,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 210,
    "metadata": {
     "tags": []
    },
@@ -155,12 +149,70 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "None\n"
+     "text": "{'profit': '49372', 'name': '黃暉翔', 'user_id': 'U60d04b2a91c5b050242a42de2c1b1947'}\n"
     }
    ],
    "source": [
     "doc = db.collection('sales').document('U60d04b2a91c5b050242a42de2c1b1947').get()\n",
     "print(doc.to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Today's date: 2020-08-13\n['2020', '08', '13']\n"
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "import time\n",
+    "today = date.today()\n",
+    "print(\"Today's date:\", today)\n",
+    "print (str(today).split(\"-\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = db.collection('sales').order_by('profit',direction=firestore.Query.DESCENDING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(seconds: 1597314498\n nanos: 188984000,\n <google.cloud.firestore_v1.document.DocumentReference at 0x112f9a050>)"
+     },
+     "metadata": {},
+     "execution_count": 230
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "ts = time.time()\n",
+    "st = datetime.datetime.fromtimestamp(ts).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "doc = { \n",
+    "            'customerID' : 'U1272cf5f42b84296f2584f9520ad28b5',\n",
+    "            'customerNAME' : '游家和',\n",
+    "            'date' : st,\n",
+    "            'product' : \"富邦產險 寵物險C方案\",\n",
+    "            'salesID' : 'U60d04b2a91c5b050242a42de2c1b1947',\n",
+    "        }\n",
+    "db.collection(\"transaction\").add(doc)"
    ]
   },
   {
