--- a/util/Untitled.ipynb
+++ b/util/Untitled.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "The default Firebase app already exists. This means you called initialize_app() more than once without providing an app name as the second argument. In most cases you only need to call initialize_app() once. But if you do want to initialize multiple apps, pass a second argument to initialize_app() to give each app a unique name.",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-215-0b48a0a5cc3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# 初始化firebase，注意不能重複初始化\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mfirebase_admin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize_app\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# 初始化firestore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/firebase_admin/__init__.py\u001b[0m in \u001b[0;36minitialize_app\u001b[0;34m(credential, options, name)\u001b[0m\n\u001b[1;32m     70\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DEFAULT_APP_NAME\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         raise ValueError((\n\u001b[0;32m---> 72\u001b[0;31m             \u001b[0;34m'The default Firebase app already exists. This means you called '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m             \u001b[0;34m'initialize_app() more than once without providing an app name as '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0;34m'the second argument. In most cases you only need to call '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The default Firebase app already exists. This means you called initialize_app() more than once without providing an app name as the second argument. In most cases you only need to call initialize_app() once. But if you do want to initialize multiple apps, pass a second argument to initialize_app() to give each app a unique name."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 引用必要套件\n",
     "import firebase_admin\n",
@@ -26,7 +13,7 @@
     "\n",
     "# 引用私密金鑰\n",
     "# path/to/serviceAccount.json 請用自己存放的路徑\n",
-    "cred = credentials.Certificate('smartflinebotserver-firebase-adminsdk-q4kci-72696b6a64.json')\n",
+    "cred = credentials.Certificate('../src/smartflinebotserver-firebase-adminsdk-q4kci-72696b6a64.json')\n",
     "\n",
     "# 初始化firebase，注意不能重複初始化\n",
     "firebase_admin.initialize_app(cred)\n",
@@ -54,58 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "/Users/xianghw/Library/Python/3.7/lib/python/site-packages/ipykernel_launcher.py:2: DeprecationWarning: 'Query.get' is deprecated:  please use 'Query.stream' instead.\n  \n"
-    }
-   ],
-   "source": [
-    "collection_ref = db.collection(\"transaction\")\n",
-    "docs = collection_ref.where('salesID','==', 'U60d04b2a91c5b050242a42de2c1b1947').get()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[<google.cloud.firestore_v1.document.DocumentSnapshot at 0x1136c62d0>,\n <google.cloud.firestore_v1.document.DocumentSnapshot at 0x11312e410>,\n <google.cloud.firestore_v1.document.DocumentSnapshot at 0x112759d50>]"
-     },
-     "metadata": {},
-     "execution_count": 217
-    }
-   ],
-   "source": [
-    "list(docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "for i in docs:\n",
-    "    doc = i.to_dict()\n",
-    "    date = doc['date']\n",
-    "    print(date)\n",
-    "    \n"
+    "docs = db.collection(\"comment\").where('id','==', 'U2649922b5604a80e08b0f9dba91f9029').get()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -113,12 +60,37 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "2020-06-30 16:00:00+00:00\n"
+     "text": "還不錯\n3\n"
     }
    ],
    "source": [
-    "date = str(date)\n",
-    "print(date)\n"
+    "for i in docs:\n",
+    "    doc = i.to_dict()\n",
+    "    print (doc['comment'])\n",
+    "    print (doc['star'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'sizeof' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-0ead30aa44a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msizeof\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sizeof' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print (sizeof(docs))"
    ]
   },
   {
@@ -217,6 +189,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " docs = db.collection(\"transaction\").where('salesID','==', 'U60d04b2a91c5b050242a42de2c1b1947').order_by(\"date\", direction=firestore.Query.DESCENDING).get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "FJsSKRhMIFKEEVIyA4Dc\nfM0YMnag5oHKaMvV8bb8\nKqDdeEOexKN8ZTdK3Sev\nTo4DuRnwlqFjAtEKmjli\ncN4odR7eZqfWKTYN2CpM\n3dfWKzfYXmmKfllJuTm9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in docs:\n",
+    "    t_doc = i.to_dict()\n",
+    "    print(i.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "'CollectionReference' object has no attribute 'doc'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-1a0e957a2e7f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdoc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcollection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"transaction\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'3dfWKzfYXmmKfllJuTm9'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'CollectionReference' object has no attribute 'doc'"
+     ]
+    }
+   ],
+   "source": [
+    "doc = db.collection(\"transaction\").document('3dfWKzfYXmmKfllJuTm9')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -225,8 +246,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37764bitf4f4acf6fe4a4249ac3843b3e19bb507",
-   "display_name": "Python 3.7.7 64-bit"
+   "name": "3250a127-08ed-47e5-b5d9-6a7a82c0518f",
+   "display_name": "'Python Interactive'"
   }
  },
  "nbformat": 4,
